Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132670

QTreeView does not always refresh on dataChanged

XMLWordPrintable

    • All
    • 9d4b5fa01 (dev), c74f0ccf1 (6.9), a156bdc9a (6.8)

      This is a regression against 6.7.

      With 6.8, emitting dataChanged on indexes does not cause the view to refresh.

      I have attached a small program to test this.

      The steps to reproduce are:

      • run the example
      • scroll a bit down
      • click the button (most of the time it works there)
      • scroll again a bit down
      • click the button

      The data is not refreshed unless you change the current row or scroll again.

       

      I just did a bisect and it is caused by 

      2f9c72028d2481f587f378a256654d0a362e3d44 (QTreeView: optimize Private::intersectedRect())

      authored by chehrlic 

        For Gerrit Dashboard: QTBUG-132670
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            thierryb Thierry Bastian
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes